--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
-                    <a download="" href="assets/pdf/cv_ramadiansyah.pdf" class="button">
+                    <a download="" href="assets/pdf/cv_rama.pdf" class="button">
                         Download CV <i class="ri-download-line"></i>
                     </a>
 
