--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Payment Site</h3>
+                                    <span class="projects__subtitle">Web Apps</span>
+                                    <h3 class="projects__title">E-ARSIP - BALMON SFR KELAS II BATAM</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
