--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project2.jpg" alt="" class="projects__img">
+                            <img src="assets/img/portofolio-web.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Portfolio website</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://ramchild1998.github.io/portofolio-mini/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -131,12 +131,12 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project3.jpg" alt="" class="projects__img">
+                            <img src="assets/img/project03.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Movil</span>
-                                    <h3 class="projects__title">Fast food app</h3>
+                                    <span class="projects__subtitle">Landing Page</span>
+                                    <h3 class="projects__title">Landing Page - SMA Negeri 12 Batam</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
@@ -145,12 +145,12 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project4.jpg" alt="" class="projects__img">
+                            <img src="assets/img/project04.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Movil</span>
-                                    <h3 class="projects__title">Travel app</h3>
+                                    <span class="projects__subtitle">Web Application Development</span>
+                                    <h3 class="projects__title">Absensi Karyawan - Setulusnya Coffee Home Shop</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
@@ -159,12 +159,12 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/project5.jpg" alt="" class="projects__img">
+                            <img src="assets/img/UI-app-Makanan.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Design</span>
-                                    <h3 class="projects__title">Music app design</h3>
+                                    <h3 class="projects__title">App Food Design UI</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
