--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web Apps</span>
+                                    <span class="projects__subtitle">Web Application Development</span>
                                     <h3 class="projects__title">E-ARSIP - BALMON SFR KELAS II BATAM</h3>
                                     <a href="#" class="projects__button button button__small">
                                         <i class="ri-link"></i>
@@ -117,11 +117,11 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/portofolio-web.jpg" alt="" class="projects__img">
+                            <img src="assets/img/portofolio.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web</span>
+                                    <span class="projects__subtitle">Web Page</span>
                                     <h3 class="projects__title">Portfolio website</h3>
                                     <a href="https://ramchild1998.github.io/portofolio-mini/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
