--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                         <article class="projects__card">
                             <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/pbc.ac.id.jpg" alt="" class="projects__img">
+                            <img src="assets/img/pbc.ac.id.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
@@ -189,7 +189,7 @@
 
                         <article class="projects__card">
                             <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/v-class.jpg" alt="" class="projects__img">
+                            <img src="assets/img/vclass.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
