--- a/index.html
+++ b/index.html
@@ -158,6 +158,34 @@
                         </article>
 
                         <article class="projects__card">
+                            <img src="assets/img/pbc.ac.id.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Web Application Development</span>
+                                    <h3 class="projects__title">Wesite Utama Politeknik Bintan Cakrawala</h3>
+                                    <a href="https://www.pbc.ac.id/" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
+                            <img src="assets/img/vclass.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Web Application Development</span>
+                                    <h3 class="projects__title">E-Learning/LMS Politeknik Bintan Cakrawala</h3>
+                                    <a href="https://www.v-class.pbcakrawala.ac.id/" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
                             <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
                             <img src="assets/img/UI-app-Makanan.jpg" alt="" class="projects__img">
 
@@ -172,35 +200,6 @@
                             </div>
                         </article>
 
-                        <article class="projects__card">
-                            <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/pbc.ac.id.png" alt="" class="projects__img">
-
-                            <div class="projects__modal">
-                                <div>
-                                    <span class="projects__subtitle">Web Application Development</span>
-                                    <h3 class="projects__title">Website Utama Politeknik Bintan Cakrawala</h3>
-                                    <a href="https://www.pbc.ac.id/" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
-
-                        <article class="projects__card">
-                            <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/vclass.png" alt="" class="projects__img">
-
-                            <div class="projects__modal">
-                                <div>
-                                    <span class="projects__subtitle">Web Application Development</span>
-                                    <h3 class="projects__title">E-Learning/LMS Politeknik Bintan Cakrawala</h3>
-                                    <a href="https://www.v-class.pbcakrawala.ac.id/" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
                     </div>
 
                     <!--=============== SKILLS ===============-->
