--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Portofolio Ramadiansyah 2023</title>
+        <title>Portofolio Ramadiansyah 2024</title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
@@ -31,7 +31,7 @@
                     </div>
 
                     <h2 class="profile__name">Ramadiansyah</h2>
-                    <h3 class="profile__profession">Programmer | Web Developer | UI/UX Enthusiast | Designer</h3>
+                    <h3 class="profile__profession">Programmer |Software Engineer| Web Developer | UI/UX Enthusiast</h3>
 
                     <ul class="profile__social">
                         <a href="https://www.instagram.com/ramchild.uiux" target="_blank" class="profile__social-link">
@@ -48,7 +48,7 @@
 
                 <div class="profile__info grid">
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">1</h3>
+                        <h3 class="profile__info-number">2</h3>
                         <p class="profile__info-description">
                             Years of <br> work
                         </p>
@@ -60,14 +60,14 @@
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">21</h3>
-                        <p class="profile__info-description">Satisfied <br> customers</p>
+                        <h3 class="profile__info-number">5</h3>
+                        <p class="profile__info-description">Satisfied <br> Corporate</p>
                     </div>
                 </div>
 
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
-                    <a download="" href="assets/pdf/CV-Ramadiansyah.pdf" class="button">
+                    <a download="" href="assets/pdf/CurriculumVitae_Ramadiansyah.pdf" class="button">
                         Download CV <i class="ri-download-line"></i>
                     </a>
 
