--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/#.png" alt="" class="projects__img">
+                            <img src="assets/img/vecteezy_red-strictly-confidential-rubber-stamp-seal-vector_23393978.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
@@ -172,7 +172,7 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/#.png" alt="" class="projects__img">
+                            <img src="assets/img/vecteezy_red-strictly-confidential-rubber-stamp-seal-vector_23393978.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
@@ -186,7 +186,7 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/#.png" alt="" class="projects__img">
+                            <img src="assets/img/vecteezy_red-strictly-confidential-rubber-stamp-seal-vector_23393978.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
@@ -200,7 +200,7 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/#.png" alt="" class="projects__img">
+                            <img src="assets/img/vecteezy_red-strictly-confidential-rubber-stamp-seal-vector_23393978.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
@@ -214,7 +214,7 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/#.png" alt="" class="projects__img">
+                            <img src="assets/img/vecteezy_red-strictly-confidential-rubber-stamp-seal-vector_23393978.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
